Bump up the font size and add support for custom labels. Realign the axis labels, fixes https://github.com/articlemetrics/alm-report/issues/99

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -3,8 +3,8 @@ html, body {
     margin: 30px 0;
 }
 
-text {
-  font: 10px sans-serif;
+text, body {
+  font: 14px sans-serif;
 }
 
 .bubble {
